--- a/Code/index.html
+++ b/Code/index.html
@@ -14,6 +14,45 @@
                 #004b23
             );
         }
+        h1{
+            text-align: center;
+        }
+        .container{
+            align-items: center;
+            margin: auto;
+            max-width: 17vw;
+            
+        }
+        .button{
+            width: 60px;
+            padding: 20px;
+            margin: 0 3px;
+            border: 2px solid black;
+            border-radius: 9px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .row{
+            margin: 8px 0;
+            display: flex;
+            align-items: center;
+            
+        }
+        .row input{
+            font-size: 19px;
+            width: 260px;
+            margin: 0;
+            padding: 10px 0px;
+            border-radius: 5px;
+            text-align: right;
+            color: #fff;
+            background-color: #222;
+            border: 1px solid #ccc;
+        }
+        .button:hover {
+            background-color: rgb(11, 107, 38);
+        }
+
     </style>
 </head>
 <body>
