--- a/Code/index.html
+++ b/Code/index.html
@@ -86,5 +86,25 @@
             <button class="button">=</button>
         </div>
     </div>
+    <script>
+        let string = "";
+        let buttons = document.querySelectorAll('.button')
+ 
+        Array.from(buttons).forEach((button) => {
+            button.addEventListener('click', (e) => {
+                if (e.target.innerHTML === '=') {
+                    string = eval(string);
+                    document.querySelector('input').value = string;
+                } else if (e.target.innerHTML === 'C') {
+                    string = "";
+                    document.querySelector('input').value = string;
+                } else {
+                    console.log(e.target);
+                    string += e.target.innerHTML;
+                    document.querySelector('input').value = string;
+                }
+            });
+        });
+    </script>
 </body>
 </html>
