added (x) and square

--- a/Code/index.html
+++ b/Code/index.html
@@ -62,6 +62,12 @@
             <input class="input" type="text">
         </div>
         <div class="row">
+            <button class="button">C</button>
+            <button class="button">%</button>
+            <button class="button" id="pi">π</button>
+            <button class="button" id="xSquared">x²</button>
+            </div>
+        <div class="row">
             <button class="button">7</button>
             <button class="button">8</button>
             <button class="button">9</button>
